# lab5

./: CMakeLists.txt  README.txt
include/: allocator.h  stack.h  stack.ipp
src/: allocator.cpp  main.cpp
test/: testF.cpp
